Dizem düzeni geliştirildi
Dizem düzeninde "r" ayırtgacı kullanılmaktaydı. Şimdi SAYI-SAYI kullanılarak aynı iş yaptırılmaktadır. Bununla ilgili SCSS ve belletiler güncellendi.

--- a/1.0/en/kap-orgusu/dizem-duzeni.html
+++ b/1.0/en/kap-orgusu/dizem-duzeni.html
@@ -3,45 +3,45 @@ layout: s1n0/default
 title: Rhythm Layout - Grid System
 ---
 <p class="girlik">
-  A rhythmic layout has been developed to create repetitive scopes of the same width. If you want to create one-one, two-two, three-three, ... you just need to use the parameter from 1r to 24r. "r" mean is "repeat".
+  A rhythmic layout has been developed to create repetitive scopes of the same width. If you want to create one-one, two-two, three-three, ... you just need to use the parameter from 1-1 to 24-24.
 </p>
 <div class="örnek">
   <h3>Preview</h3>
   <div class="önizleme">
-    <div data-gnl="2r">
+    <div data-gnl="2-2">
       <div>
-        two-two
+        2-2
       </div>
       <div>
-        two-two
+        2-2
       </div>
       <div>
-        two-two
+        2-2
       </div>
       <div>
-        two-two
+        2-2
       </div>
       <div>
-        two-two
+        2-2
       </div>
     </div>
   </div>
   {% highlight html %}
-  <div data-gnl="2r">
+  <div data-gnl="2-2">
     <div>
-      two-two
+      2-2
     </div>
     <div>
-      two-two
+      2-2
     </div>
     <div>
-      two-two
+      2-2
     </div>
     <div>
-      two-two
+      2-2
     </div>
     <div>
-      two-two
+      2-2
     </div>
   </div>
   {% endhighlight %}
@@ -54,52 +54,52 @@ title: Rhythm Layout - Grid System
 <div class="örnek">
   <h3>Örnek</h3>
   <div class="önizleme">
-    <div data-gnl="4r">
+    <div data-gnl="4-4">
       <div>
-        four-four
+        4-4
       </div>
       <div data-gnl="2 /4">
         2 /4
       </div>
       <div>
-        four-four
+        4-4
       </div>
       <div>
-        four-four
+        4-4
       </div>
       <div>
-        four-four
+        4-4
       </div>
       <div>
-        four-four
+        4-4
       </div>
       <div>
-        four-four
+        4-4
       </div>
     </div>
   </div>
   {% highlight html %}
-  <div data-gnl="4r">
+  <div data-gnl="4-4">
     <div>
-      four-four
+      4-4
     </div>
     <div data-gnl="2 /4">
       2 /4
     </div>
     <div>
-      four-four
+      4-4
     </div>
     <div>
-      four-four
+      4-4
     </div>
     <div>
-      four-four
+      4-4
     </div>
     <div>
-      four-four
+      4-4
     </div>
     <div>
-      four-four
+      4-4
     </div>
   </div>
   {% endhighlight %}
@@ -112,7 +112,7 @@ title: Rhythm Layout - Grid System
 <div class="örnek">
   <h3>Preview</h3>
   <div class="önizleme">
-    <div data-gnl="4r">
+    <div data-gnl="4-4">
       <div data-gnl="1 /">
         1 /
       </div>
@@ -120,24 +120,24 @@ title: Rhythm Layout - Grid System
         2 /
       </div>
       <div>
-        four-four
+        4-4
       </div>
       <div>
-        four-four
+        4-4
       </div>
       <div>
-        four-four
+        4-4
       </div>
       <div>
-        four-four
+        4-4
       </div>
       <div>
-        four-four
+        4-4
       </div>
     </div>
   </div>
   {% highlight html %}
-  <div data-gnl="4r">
+  <div data-gnl="4-4">
     <div data-gnl="1 /">
       1 /
     </div>
@@ -145,19 +145,19 @@ title: Rhythm Layout - Grid System
       2 /
     </div>
     <div>
-      four-four
+      4-4
     </div>
     <div>
-      four-four
+      4-4
     </div>
     <div>
-      four-four
+      4-4
     </div>
     <div>
-      four-four
+      4-4
     </div>
     <div>
-      four-four
+      4-4
     </div>
   </div>
   {% endhighlight %}
@@ -169,7 +169,7 @@ title: Rhythm Layout - Grid System
 <div class="örnek">
   <h3>Preview</h3>
   <div class="önizleme">
-    <div data-gnl="4r">
+    <div data-gnl="4-4">
       <div data-gnl="1 /">
         1 /
       </div>
@@ -180,21 +180,21 @@ title: Rhythm Layout - Grid System
         2 /4
       </div>
       <div>
-        four-four
+        4-4
       </div>
       <div>
-        four-four
+        4-4
       </div>
       <div>
-        four-four
+        4-4
       </div>
       <div>
-        four-four
+        4-4
       </div>
     </div>
   </div>
   {% highlight html %}
-  <div data-gnl="4r">
+  <div data-gnl="4-4">
     <div data-gnl="1 /">
       1 /
     </div>
@@ -205,16 +205,16 @@ title: Rhythm Layout - Grid System
       2 /4
     </div>
     <div>
-      four-four
+      4-4
     </div>
     <div>
-      four-four
+      4-4
     </div>
     <div>
-      four-four
+      4-4
     </div>
     <div>
-      four-four
+      4-4
     </div>
   </div>
   {% endhighlight %}
