--- a/1.0/tr/kap-orgusu/dizem-duzeni.html
+++ b/1.0/tr/kap-orgusu/dizem-duzeni.html
@@ -3,45 +3,45 @@ layout: s1n0/varsayilan
 title: Dizem Düzeni - Kap Örgüsü
 ---
 <p class="girlik">
-  Aynı genişlikte tekrar eden kapsamlar oluşturmak için dizem düzeni geliştirilmiştir. Birer birer, ikişer ikişer, üçer üçer, ... oluşturmak isterseniz 1r~24r arasındaki değiştirgeyi kullanmanız yeterlidir.
+  Aynı genişlikte tekrar eden kapsamlar oluşturmak için dizem düzeni geliştirilmiştir. Birer birer, ikişer ikişer, üçer üçer, ... oluşturmak isterseniz 1-1 ile 24-24 arasındaki değerleri kullanmanız yeterlidir.
 </p>
 <div class="örnek">
   <h3>Örnek</h3>
   <div class="önizleme">
-    <div data-gnl="2r">
+    <div data-gnl="2-2">
       <div>
-        ikişer ikişer
+        2-2
       </div>
       <div>
-        ikişer ikişer
+        2-2
       </div>
       <div>
-        ikişer ikişer
+        2-2
       </div>
       <div>
-        ikişer ikişer
+        2-2
       </div>
       <div>
-        ikişer ikişer
+        2-2
       </div>
     </div>
   </div>
   {% highlight html %}
-  <div data-gnl="2r">
+  <div data-gnl="2-2">
     <div>
-      ikişer ikişer
+      2-2
     </div>
     <div>
-      ikişer ikişer
+      2-2
     </div>
     <div>
-      ikişer ikişer
+      2-2
     </div>
     <div>
-      ikişer ikişer
+      2-2
     </div>
     <div>
-      ikişer ikişer
+      2-2
     </div>
   </div>
   {% endhighlight %}
@@ -56,52 +56,52 @@ title: Dizem Düzeni - Kap Örgüsü
 <div class="örnek">
   <h3>Örnek</h3>
   <div class="önizleme">
-    <div data-gnl="4r">
+    <div data-gnl="4-4">
       <div>
-        dörder dörder
+        4-4
       </div>
       <div data-gnl="2 /4">
         2 /4
       </div>
       <div>
-        dörder dörder
+        4-4
       </div>
       <div>
-        dörder dörder
+        4-4
       </div>
       <div>
-        dörder dörder
+        4-4
       </div>
       <div>
-        dörder dörder
+        4-4
       </div>
       <div>
-        dörder dörder
+        4-4
       </div>
     </div>
   </div>
   {% highlight html %}
-  <div data-gnl="4r">
+  <div data-gnl="4-4">
     <div>
-      dörder dörder
+      4-4
     </div>
     <div data-gnl="2 /4">
       2 /4
     </div>
     <div>
-      dörder dörder
+      4-4
     </div>
     <div>
-      dörder dörder
+      4-4
     </div>
     <div>
-      dörder dörder
+      4-4
     </div>
     <div>
-      dörder dörder
+      4-4
     </div>
     <div>
-      dörder dörder
+      4-4
     </div>
   </div>
   {% endhighlight %}
@@ -116,7 +116,7 @@ title: Dizem Düzeni - Kap Örgüsü
 <div class="örnek">
   <h3>Örnek</h3>
   <div class="önizleme">
-    <div data-gnl="4r">
+    <div data-gnl="4-4">
       <div data-gnl="1 /">
         1 /
       </div>
@@ -124,24 +124,24 @@ title: Dizem Düzeni - Kap Örgüsü
         2 /
       </div>
       <div>
-        dörder dörder
+        4-4
       </div>
       <div>
-        dörder dörder
+        4-4
       </div>
       <div>
-        dörder dörder
+        4-4
       </div>
       <div>
-        dörder dörder
+        4-4
       </div>
       <div>
-        dörder dörder
+        4-4
       </div>
     </div>
   </div>
   {% highlight html %}
-  <div data-gnl="4r">
+  <div data-gnl="4-4">
     <div data-gnl="1 /">
       1 /
     </div>
@@ -149,19 +149,19 @@ title: Dizem Düzeni - Kap Örgüsü
       2 /
     </div>
     <div>
-      dörder dörder
+      4-4
     </div>
     <div>
-      dörder dörder
+      4-4
     </div>
     <div>
-      dörder dörder
+      4-4
     </div>
     <div>
-      dörder dörder
+      4-4
     </div>
     <div>
-      dörder dörder
+      4-4
     </div>
   </div>
   {% endhighlight %}
@@ -175,7 +175,7 @@ title: Dizem Düzeni - Kap Örgüsü
 <div class="örnek">
   <h3>Örnek</h3>
   <div class="önizleme">
-    <div data-gnl="4r">
+    <div data-gnl="4-4">
       <div data-gnl="1 /">
         1 /
       </div>
@@ -186,21 +186,21 @@ title: Dizem Düzeni - Kap Örgüsü
         2 /4
       </div>
       <div>
-        dörder dörder
+        4-4
       </div>
       <div>
-        dörder dörder
+        4-4
       </div>
       <div>
-        dörder dörder
+        4-4
       </div>
       <div>
-        dörder dörder
+        4-4
       </div>
     </div>
   </div>
   {% highlight html %}
-  <div data-gnl="4r">
+  <div data-gnl="4-4">
     <div data-gnl="1 /">
       1 /
     </div>
@@ -211,16 +211,16 @@ title: Dizem Düzeni - Kap Örgüsü
       2 /4
     </div>
     <div>
-      dörder dörder
+      4-4
     </div>
     <div>
-      dörder dörder
+      4-4
     </div>
     <div>
-      dörder dörder
+      4-4
     </div>
     <div>
-      dörder dörder
+      4-4
     </div>
   </div>
   {% endhighlight %}
