Dosyalar düzeltildi. Günce eklendi

--- a/belgeler/deveb.html
+++ b/belgeler/deveb.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: b-default
 title: Deveb'e Hoş Geldiniz
 ---
 <p style="font-size: 1.5em;margin-bottom: 30px;font-weight: 300;">
