--- a/belgeler/diller.html
+++ b/belgeler/diller.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: b-default
 title: Diller
 ---
 <p>Bu sayfadaki bilgiler deveb geliştiricilerine yöneliktir. Kaynak dosyalarıyla ilgili yaptıkları çalışmalarda buradaki bilgiler yardımcı olması amacıyla üretilmiştir.</p>
