ilker tasarımı güncellendi

--- a/temalar/ilker/index.html
+++ b/temalar/ilker/index.html
@@ -1,7 +1,51 @@
 ---
-layout: ilker/temel
-title: Deveb | İlker.Tema Anasayfa
-alan: Deveb İlker Temasına Hoş Geldiniz
+layout: ilker/baslangıc
+title: Deveb | İlker.Tasarım Anasayfa
+alan: Deveb İlker Tasarımına Hoş Geldiniz
 alan-alt: Geliştirmeye devam ediyoruz.
 ---
-deneme3
+<div data-gnl="kap" style="padding-top:40px; padding-bottom: 40px;">
+	<div data-gnl="3 /14 t">
+		<img src="https://placeimg.com/640/480/animals">
+	</div>
+	<div data-gnl="10 /14 _s">
+		<h1>Burası Örnek Başlıktır</h1>
+		<p>
+			 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed consectetur odio ante, eget suscipit dui laoreet at. Vivamus ut malesuada mauris, vitae aliquam augue. Fusce non elit quis purus elementum vestibulum id sit amet enim. Maecenas ac hendrerit orci, eget dignissim nisi. Nulla interdum, diam eget dignissim ultrices, ex massa laoreet ipsum, eget malesuada quam libero ac nibh. Aliquam sodales massa libero. Donec posuere, magna ac tristique condimentum, ligula turpis porta nibh, viverra vestibulum neque justo vel quam. Sed dapibus ornare gravida. Praesent volutpat aliquet tortor et sagittis. Nullam vitae mauris vulputate, aliquet turpis sit amet, vehicula magna. Duis id turpis augue. Praesent luctus placerat ultricies. In rutrum augue ut molestie consequat. Donec et mauris ac nisi lacinia venenatis non quis lectus.
+		</p>
+		<ul>
+			<li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+			<li>Sed consectetur odio ante, eget suscipit dui laoreet at</li>
+			<li>Vivamus ut malesuada mauris, vitae aliquam augue</li>
+			<li>Fusce non elit quis purus elementum vestibulum id sit amet enim</li>
+		</ul>
+	</div>
+</div>
+<div data-gnl="kap 3-3 araları-aralık-3" style="padding-top:40px; padding-bottom: 40px;">
+	<div data-gnl="12 metin-ortada">
+		<h1>
+			Güzel Birkaç Görsel Sizinle
+		</h1>
+		<p>
+			Dünyadan birkaç görseli gelişi güzel seçerek size sunuyoruz.
+		</p>
+	</div>
+	<div>
+		<img src="https://placeimg.com/640/480/any">
+	</div>
+	<div>
+		<img src="https://placeimg.com/640/480/arch">
+	</div>
+	<div>
+		<img src="https://placeimg.com/640/480/nature">
+	</div>
+	<div>
+		<img src="https://placeimg.com/640/480/people">
+	</div>
+	<div>
+		<img src="https://placeimg.com/640/480/tech">
+	</div>
+	<div>
+		<img src="https://placeimg.com/640/480/tech/grayscale">
+	</div>
+</div>
