--- a/temalar/ilker/index.html
+++ b/temalar/ilker/index.html
@@ -21,31 +21,33 @@ alan-alt: Geliştirmeye devam ediyoruz.
 		</ul>
 	</div>
 </div>
-<div data-gnl="kap 3-3 araları-aralık-3" style="padding-top:40px; padding-bottom: 40px;">
-	<div data-gnl="12 metin-ortada">
-		<h1>
-			Güzel Birkaç Görsel Sizinle
-		</h1>
-		<p>
-			Dünyadan birkaç görseli gelişi güzel seçerek size sunuyoruz.
-		</p>
-	</div>
-	<div>
-		<img src="https://placeimg.com/640/480/any">
-	</div>
-	<div>
-		<img src="https://placeimg.com/640/480/arch">
-	</div>
-	<div>
-		<img src="https://placeimg.com/640/480/nature">
-	</div>
-	<div>
-		<img src="https://placeimg.com/640/480/people">
-	</div>
-	<div>
-		<img src="https://placeimg.com/640/480/tech">
-	</div>
-	<div>
-		<img src="https://placeimg.com/640/480/tech/grayscale">
+<div data-gnl="o" style="padding-top:40px; padding-bottom: 40px; background:linear-gradient(to bottom,#ddd,#eee)">
+	<div data-gnl="kap 3-3 araları-aralık-3">
+		<div data-gnl="12 metin-ortada">
+			<h1>
+				Güzel Birkaç Görsel Sizinle
+			</h1>
+			<p>
+				Dünyadan birkaç görseli gelişi güzel seçerek size sunuyoruz.
+			</p>
+		</div>
+		<div>
+			<img src="https://placeimg.com/640/480/any">
+		</div>
+		<div>
+			<img src="https://placeimg.com/640/480/arch">
+		</div>
+		<div>
+			<img src="https://placeimg.com/640/480/nature">
+		</div>
+		<div>
+			<img src="https://placeimg.com/640/480/people">
+		</div>
+		<div>
+			<img src="https://placeimg.com/640/480/tech">
+		</div>
+		<div>
+			<img src="https://placeimg.com/640/480/tech/grayscale">
+		</div>
 	</div>
 </div>
