--- a/temalar/ilker/blog.html
+++ b/temalar/ilker/blog.html
@@ -2,7 +2,8 @@
 layout: ilker/blog
 title: Deveb | İlker.Tasarım Anasayfa
 ---
-<div data-gnl="kap 3-3 araları-aralık-2 _o" style="padding-top:40px; padding-bottom: 40px;">
+<div data-gnl="kap _o" style="padding-top:40px; padding-bottom: 40px;">
+	<div data-gnl="3-3 araları-aralık-2">
 	<div>
 		<div class="blog-kart">
 			<img src="https://placeimg.com/640/480/any">
@@ -62,5 +63,6 @@ title: Deveb | İlker.Tasarım Anasayfa
 				<p>Oku...</p>
 			</div>
 		</div>
+	</div>
 	</div>
 </div>
