--- a/temalar/ilker/index.html
+++ b/temalar/ilker/index.html
@@ -1,5 +1,5 @@
 ---
-layout: ilker/baslangıc
+layout: temalar/ilker/baslangic
 title: Deveb | İlker.Tasarım Anasayfa
 alan: Deveb İlker Tasarımına Hoş Geldiniz
 alan-alt: Geliştirmeye devam ediyoruz.
