--- a/temalar/ilker/blog.html
+++ b/temalar/ilker/blog.html
@@ -1,5 +1,5 @@
 ---
-layout: ilker/blog
+layout: temalar/ilker/blog
 title: Deveb | İlker.Tasarım Anasayfa
 ---
 <div data-gnl="kap _o" style="padding-top:40px; padding-bottom: 40px;">
