--- a/belgeler/1.0/en/test.html
+++ b/belgeler/1.0/en/test.html
@@ -20,13 +20,14 @@ body {
 
 header {
   background-color:#FFF;
-  height:150px;
+  height:50px;
   border-bottom:2px solid #E9E9E9;
   flex:0 0 auto;
 }
 .container {
   padding:10px;
   flex:1 1 auto;
+  overflow:auto;
 }
 .toolbox {
   flex:0 0 auto;
@@ -51,7 +52,7 @@ button {
 
 .mock-content .mock-item {
   width:100px;
-  height:400px;
+  height:500px;
   border-radius:5px;
   box-shadow:0 5px 10px rgba(0,0,0,0.1);
   background-color:#FFF;
@@ -71,53 +72,7 @@ button {
       <div class="mock-item"></div>
       <div class="mock-item"></div>
     </div>
-        <div class="mock-content">
-      <div class="mock-item"></div>
-      <div class="mock-item"></div>
-    </div>
-        <div class="mock-content">
-      <div class="mock-item"></div>
-      <div class="mock-item"></div>
-    </div>
-        <div class="mock-content">
-      <div class="mock-item"></div>
-      <div class="mock-item"></div>
-    </div>
-        <div class="mock-content">
-      <div class="mock-item"></div>
-      <div class="mock-item"></div>
-    </div>
-        <div class="mock-content">
-      <div class="mock-item"></div>
-      <div class="mock-item"></div>
-    </div>
-        <div class="mock-content">
-      <div class="mock-item"></div>
-      <div class="mock-item"></div>
-    </div>
-        <div class="mock-content">
-      <div class="mock-item"></div>
-      <div class="mock-item"></div>
-    </div>
-        <div class="mock-content">
-      <div class="mock-item"></div>
-      <div class="mock-item"></div>
-    </div>
-        <div class="mock-content">
-      <div class="mock-item"></div>
-      <div class="mock-item"></div>
-    </div>    <div class="mock-content">
-      <div class="mock-item"></div>
-      <div class="mock-item"></div>
-    </div>
-        <div class="mock-content">
-      <div class="mock-item"></div>
-      <div class="mock-item"></div>
-    </div>
-        <div class="mock-content">
-      <div class="mock-item"></div>
-      <div class="mock-item"></div>
-    </div>
+
   </div>
   <div class="toolbox">
     <button>Next</button>
