--- a/belgeler/1.0/en/test.html
+++ b/belgeler/1.0/en/test.html
@@ -72,7 +72,18 @@ button {
       <div class="mock-item"></div>
       <div class="mock-item"></div>
     </div>
-
+        <div class="mock-content">
+      <div class="mock-item"></div>
+      <div class="mock-item"></div>
+    </div>
+            <div class="mock-content">
+      <div class="mock-item"></div>
+      <div class="mock-item"></div>
+    </div>
+            <div class="mock-content">
+      <div class="mock-item"></div>
+      <div class="mock-item"></div>
+    </div>
   </div>
   <div class="toolbox">
     <button>Next</button>
