--- a/belgeler/1.0/en/test1.html
+++ b/belgeler/1.0/en/test1.html
@@ -2,75 +2,45 @@
   <head>
   <style>
 html, body {margin:0;padding:0;}
-html {
-  height: -webkit-fill-available;
-}
 body {
-  background-color:#F2F2F2
-  min-height: 100vh;
-  min-height: -webkit-fill-available;
+  display: flex;
+  flex-direction: column;
+  background: gray;
+  flex: 1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  position: absolute;
+  margin: 0;
 }
 
-#site {
-  display:flex;
-  flex-direction:column;
-  height:100vh;
-  max-height:-webkit-fill-available;
+main {
+  display: flex;
+  flex-wrap: wrap;
+  overflow: auto;
+  width: 100%;
 }
 
-header {
-  background-color:#FFF;
-  height:150px;
-  border-bottom:2px solid #E9E9E9;
-  flex:0 0 auto;
-}
-.container {
-  padding:10px;
-  flex:1 1 auto;
-}
-.toolbox {
-  flex:0 0 auto;
-  padding:20px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
+p {
+  display: block;
+  width: 100%;
 }
 
-button {
-  color:#d9ddff;
-  background-color:#29369F;
-  border:none;
-  border-radius:50px;
-  padding:10px 25px;
+footer {
+  margin-top: auto;
+  background-color:yellow;
 }
 
-.mock-content {
-  display:flex;
-  justify-content:center;
-}
-
-.mock-content .mock-item {
-  width:100px;
-  height:400px;
-  border-radius:5px;
-  box-shadow:0 5px 10px rgba(0,0,0,0.1);
-  background-color:#FFF;
-  margin:10px;
-}
     </style>
   </head>
   <body>
-  <div id="site">
-  <header></header>
-  <div class="container">
-    <div class="mock-content">
-      <div class="mock-item"></div>
-      <div class="mock-item"></div>
-    </div>
-  </div>
-  <div class="toolbox">
-    <button>Next</button>
-  </div>
-</div>
+  <main>
+  <p>Lorem Ipsum, dizgi ve baskı endüstrisinde kullanılan mıgır metinlerdir. Lorem Ipsum, adı bilinmeyen bir matbaacının bir hurufat numune kitabı oluşturmak üzere bir yazı galerisini alarak karıştırdığı 1500'lerden beri endüstri standardı sahte metinler olarak kullanılmıştır. Beşyüz yıl boyunca varlığını sürdürmekle kalmamış, aynı zamanda pek değişmeden elektronik dizgiye de sıçramıştır. 1960'larda Lorem Ipsum pasajları da içeren Letraset yapraklarının yayınlanması ile ve yakın zamanda Aldus PageMaker gibi Lorem Ipsum sürümleri içeren masaüstü yayıncılık yazılımları ile popüler olmuştur.</p>
+  <p>Yaygın inancın tersine, Lorem Ipsum rastgele sözcüklerden oluşmaz. Kökleri M.Ö. 45 tarihinden bu yana klasik Latin edebiyatına kadar uzanan 2000 yıllık bir geçmişi vardır. Virginia'daki Hampden-Sydney College'dan Latince profesörü Richard McClintock, bir Lorem Ipsum pasajında geçen ve anlaşılması en güç sözcüklerden biri olan 'consectetur' sözcüğünün klasik edebiyattaki örneklerini incelediğinde kesin bir kaynağa ulaşmıştır. Lorm Ipsum, Çiçero tarafından M.Ö. 45 tarihinde kaleme alınan "de Finibus Bonorum et Malorum" (İyi ve Kötünün Uç Sınırları) eserinin 1.10.32 ve 1.10.33 sayılı bölümlerinden gelmektedir. Bu kitap, ahlak kuramı üzerine bir tezdir ve Rönesans döneminde çok popüler olmuştur. Lorem Ipsum pasajının ilk satırı olan "Lorem ipsum dolor sit amet" 1.10.32 sayılı bölümdeki bir satırdan gelmektedir.</p>
+  <p>Deveb</p>
+</main>
+<footer>deveb altlık (footer)</footer>
+
   </body>
 </html>
