--- a/belgeler/1.0/en/test1.html
+++ b/belgeler/1.0/en/test1.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
 html, body {margin:0;padding:0;}
 body {
