--- a/belgeler/1.0/en/test1.html
+++ b/belgeler/1.0/en/test1.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-html, body {margin:0;padding:0;}
+html, body {width:100%;height:100%; margin:0;padding:0;}
 body {
   display: flex;
   flex-direction: column;
