--- a/belgeler/1.0/en/test1.html
+++ b/belgeler/1.0/en/test1.html
@@ -2,18 +2,17 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-html, body {width:100%;height:100%; margin:0;padding:0;}
+html, body {margin:0;padding:0;}
 body {
   display: flex;
   flex-direction: column;
-  background: gray;
   flex: 1;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  height:100%;
+  width:100%;
   position: absolute;
-  margin: 0;
+  top: 0;
+  left: 0;
+  background: gray;
 }
 
 main {
