--- a/belgeler/1.0/en/test1.html
+++ b/belgeler/1.0/en/test1.html
@@ -1,7 +1,12 @@
 <html>
   <head>
+    <!--
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
+-->
+<meta name="viewport" content="user-scalable=no,initial-scale=1.0,maximum-scale=1.0" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
   <style>
 html, body {margin:0;padding:0;}
