--- a/index.html
+++ b/index.html
@@ -295,26 +295,40 @@ title: Anabet
   </div>
   <div class="ilk-alan">
     <intro class="ortalı yazı">
-      <h1>deveb</h1>
-      <h2>Çığır Açan Html Css Çatısı</h2>
+      <h1>deveb.css</h1>
+      <h2>HTML-CSS Kullanmada Çığır Açan Yordam</h2>
       <p>
-        Tasarımlarda kullanılabilen; çeviklik, kolaylık ve yeğnilik katan; esnek, işleğen, erişilebilir bir css.
+        Çabuk tasarım yapmaya yarayan, kolay, yeğni, esnek, çevik, işlek, erişkel bir css.
       </p>
     </intro>
   </div>
 
   <div class="bölümcükler (1/1)">
     <div class="(1/2) {1}" küçük="(1/3)" orta="(1/4)">
-      <a href="#">Niye <span style="color: white; font-weight: bold;">deveb</span>?</a>
+      <a href="#" style="text-align: center; line-height: 28px;"><i class="fa-regular fa-circle-question" style="color: rgba(255,255,255,.8);"></i><br>Niye <span style="color: white; font-weight: bold;">deveb</span>?</a>
     </div>
     <div class="(1/2) {1}" küçük="(1/3) {1}" orta="(1/4)">
-      <a href="/kılavuz">Başlayıver</a>
+      <a href="/kılavuz" style="text-align: center; line-height: 28px;"><i class="fa-solid fa-book-open-reader" style="color: rgba(255,255,255,.8);"></i><br>Başlayıver</a>
     </div>
     <div class="(1/2) {1}" küçük="(2/3)" orta="(1/4)">
-      <a href="#">Ağılla</a>
+      <a href="#" style="text-align: center; line-height: 28px;"><i class="fa-solid fa-download" style="color: rgba(255,255,255,.8);"></i><br>Ağılla</a>
     </div>
     <div class="(1/2) {1}" küçük="(1/3)" orta="(1/4) {1}">
-      <a href="#">Daha Daha</a>
+      <a href="#" style="text-align: center; line-height: 28px;"><i class="fa-solid fa-ellipsis"  style="color: rgba(255,255,255,.8);"></i><br>Daha Daha</a>
+    </div>
+  </div>
+  <div class="bölümcükler (1/1)">
+    <div class="(1/2) {1}" küçük="(1/3)" orta="(1/4)">
+      <a href="#">Bölme Düzeni</a>
+    </div>
+    <div class="(1/2) {1}" küçük="(1/3) {1}" orta="(1/4)">
+      <a href="#">Esneme Düzeni</a>
+    </div>
+    <div class="(1/2) {1}" küçük="(2/3)" orta="(1/4)">
+      <a href="#">Düğme Düzeni</a>
+    </div>
+    <div class="(1/2) {1}" küçük="(1/3)" orta="(1/4) {1}">
+      <a href="#">YAKINDA...</a>
     </div>
   </div>
   <div class="bölümcükler (1/1)">
