--- a/index.html
+++ b/index.html
@@ -349,22 +349,22 @@ title: Anabet
 
     <div class="bölümcükler (1/1)">
       <div class="(1/3) {1}" orta="({1})">
-        <a href="https://www.w3.org/html/"><i class="fa-brands fa-html5" style="color: #f06529;"></i><br>HTML5</a>
+        <a href="https://www.w3.org/html/"><i class="fa-brands fa-html5" style="color: #f06529;"></i>HTML5</a>
       </div>
       <div class="(1/3) {1}" orta="({1})">
-        <a href="https://www.w3.org/Style/CSS/Overview.en.html"><i class="fa-brands fa-css3-alt" style="color: #3c99dc;"></i><br>CSS3</a>
+        <a href="https://www.w3.org/Style/CSS/Overview.en.html"><i class="fa-brands fa-css3-alt" style="color: #3c99dc;"></i>CSS3</a>
       </div>
       <div class="(1/3) {1}" orta="({1})">
-          <a href="https://www.mozilla.org/tr/firefox/"><i class="fa-brands fa-firefox-browser" style="color: #ff6611;"></i><br>Firefox</a>
+          <a href="https://www.mozilla.org/tr/firefox/"><i class="fa-brands fa-firefox-browser" style="color: #ff6611;"></i>Firefox</a>
       </div>
       <div class="(1/3) {1}" orta="({1})">
-          <a href="https://www.microsoft.com/tr-tr/edge"><i class="fa-brands fa-edge" style="color: #20b4bf;"></i><br>Edge</a>
+          <a href="https://www.microsoft.com/tr-tr/edge"><i class="fa-brands fa-edge" style="color: #20b4bf;"></i>Edge</a>
       </div>
       <div class="(1/3) {1}" orta="({1})">
-          <a href="https://www.google.com/chrome/"><i class="fa-brands fa-chrome" style="color: #ffcd46;"></i><br>Chrome</a>
+          <a href="https://www.google.com/chrome/"><i class="fa-brands fa-chrome" style="color: #ffcd46;"></i>Chrome</a>
       </div>
       <div class="(1/3) {1}" orta="({1})">
-          <a href="https://www.opera.com/tr"><i class="fa-brands fa-opera" style="color: #cb0b1e;"></i><br>Opera</a>
+          <a href="https://www.opera.com/tr"><i class="fa-brands fa-opera" style="color: #cb0b1e;"></i>Opera</a>
       </div>
     </div>
   </div>
